# example.code

./: README.md
win_exit_breaker/: .gitignore  CMakeLists.txt  CMakeSettings.json  gemini.md  win_exit_breaker.cpp
